--- a/Sources/MagicCardTracker.Pwa/Components/Notifications.razor
+++ b/Sources/MagicCardTracker.Pwa/Components/Notifications.razor
@@ -2,7 +2,7 @@
 @implements IDisposable
 @inject INotificationService _notificationService
 
-<div id="notification-container" class="content">
+<div id="notification-container" class="content pull-right">
 
     @foreach (var notification in _activeNotifications)
     {
