--- a/Sources/MagicCardTracker.Pwa/Components/Notifications.razor.css
+++ b/Sources/MagicCardTracker.Pwa/Components/Notifications.razor.css
@@ -2,12 +2,12 @@
 #notification-container {
 
     position: fixed;
-    bottom: 0;
+    top: 60px;
+    right: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    z-index: 1010;
-    width: 100%;
+    z-index: 1100;
 }
 
 .notification {
