--- a/Sources/MagicCardTracker.Pwa/wwwroot/css/style.css
+++ b/Sources/MagicCardTracker.Pwa/wwwroot/css/style.css
@@ -31,6 +31,7 @@ body {
     max-height: 60vh;
     max-width: 100%;
     border-radius: 5%;
+    cursor: pointer;
 }
 
 .magic-card.thumbnail {
@@ -48,7 +49,8 @@ a, .btn-link, a:hover, .action-link {
     text-decoration: none;
 }
 
-.action-link {
+.action-link,
+.selectable {
     cursor: pointer;
 }
 
