--- a/Sources/MagicCardTracker.Pwa/_Imports.razor
+++ b/Sources/MagicCardTracker.Pwa/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using MagicCardTracker.Pwa
 @using MagicCardTracker.Pwa.Shared
+@using MagicCardTracker.Pwa.Components
+@using ChartJs.Blazor;
