--- a/Sources/MagicCardTracker.Pwa/Shared/NavMenu.razor
+++ b/Sources/MagicCardTracker.Pwa/Shared/NavMenu.razor
@@ -7,7 +7,9 @@
 
     <div class="container-fluid">
         <div clas="navbar-brand">
+            <a href=""> 
             <img class="img-fluid" src="MCT_Logo_Wide.png" style="height:40px" />
+            </a>
         </div>
         <button class="navbar-toggler border-0 shadow-none" @onclick="ToggleNavMenu">
             <i class="bi bi-list"></i>
