--- a/Sources/MagicCardTracker.Pwa/App.razor
+++ b/Sources/MagicCardTracker.Pwa/App.razor
@@ -4,7 +4,11 @@
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
+            <div class="h-100 d-flex justify-content-center align-items-center">
+                <div class="lead"> 
+                    Congratulations, you've reachend the end.
+                </div>
+            </div>
         </LayoutView>
     </NotFound>
 </Router>
