--- a/Sources/MagicCardTracker.Pwa/Components/CardOverlay.razor
+++ b/Sources/MagicCardTracker.Pwa/Components/CardOverlay.razor
@@ -8,16 +8,22 @@
 
 @if (_isVisible)
 {
-<div class="backdrop overflow-auto">
+<div class="backdrop bg-black80 overflow-auto">
     <div class="container d-flex flex-grow-1">
-        <div class="row flex-grow-1 align-items-center">
+        <div class="row flex-grow-1 mb-4 align-items-center">
             <div class="col-md-6 d-flex justify-content-center">
-                <div class="content">
-                    <img class="magic-card" @onclick="@Close" src="@_cardImageUrl" />
+                <div class="content d-flex flex-column">
+                    <img class="magic-card large" @onclick="@Close" src="@(_isTransformed ? _card.FlipsideImageUrl : _card.ImageUrl)" />
+                    @if (!string.IsNullOrEmpty(_card.FlipsideImageUrl))
+                    {
+                        <label class="action-link text-center mt-2" @onclick="@ToggleTransform">
+                            <i class="bi bi-arrow-repeat"></i> Transform
+                        </label>
+                    }
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="bg-elevated content">
+                <div class="bg-elevated content position-relative">
                 <LoadingIndicator IsBusy="@_isBusy"></LoadingIndicator>
                 @if (_card != null)
                 {
@@ -82,17 +88,17 @@
 
 @code
 {
-    private string _cardImageUrl { get; set; }
-
     private CollectedCard _card { get; set; }
 
     private bool _isVisible;
 
     private bool _isBusy;
 
+    private bool _isTransformed;
+
     public async Task OpenAsync(Card card)
     {
-        _cardImageUrl = card.ImageUrl;
+        _isTransformed = false;
         _isVisible = true;
         _isBusy = true;
         StateHasChanged();
@@ -116,6 +122,11 @@
         var command = new AddCard(_card);
         await Mediator.Send(command, CancellationToken.None);
         Close();
+    }
+
+    private void ToggleTransform()
+    {
+        _isTransformed = !_isTransformed;
     }
 
     private static string GetLegalClass(Card card, Legality legality)
